unifying some more header styles

--- a/app/views/admin/issues/index.html.haml
+++ b/app/views/admin/issues/index.html.haml
@@ -4,7 +4,7 @@
       = link_to 'Issues', [:admin, :issues]
 
     %nav
-      - if Issue.maximum(:issue_date) < Date.current
+      - if !Issue.any? or (Issue.maximum(:issue_date) < Date.current)
         = link_to 'Generate next issue', [:admin, :issues], class: 'button', method: 'post'
 
   %div.filters
