--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -2,40 +2,42 @@
 - description "We're eager to hear from our readers about tips, corrections, or anything at all."
 - set_meta_tags canonical: "https://www.dublininquirer.com/contact"
 
-.wrapper.-contained{role: 'layout'}
-  %header.-static
-    %h1.heading Contact us
-    %p.p.-b1
-      We love tips, complaints, corrections, and compliments. You can always reach us by email at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>, but if you’re looking for something more secure – <em>although nothing is 100 percent</em> – then, here are some other options:
 
-  .article
-    :markdown
-      #### WhatsApp
+%header.page-header
+  %h1.heading Contact us
+  %p.p.-b1
+    We love tips, complaints, corrections, and compliments. You can always reach us by email at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>, but if you’re looking for something more secure – <em>although nothing is 100 percent</em> – then, here are some other options.
 
-      You can download the free messaging app onto your mobile phone to send and receive messages with full end-to-end encryption. WhatsApp, which is owned by Facebook, does store some records, including phone numbers used in exchanges, users’ metadata and timestamps.
+.block.-p2.-pb4
+  .wrapper.-small{role: 'layout'}
+    .article
+      :markdown
+        #### WhatsApp
 
-      Add us:
+        You can download the free messaging app onto your mobile phone to send and receive messages with full end-to-end encryption. WhatsApp, which is owned by Facebook, does store some records, including phone numbers used in exchanges, users’ metadata and timestamps.
 
-      `+353 873924796`
+        Add us:
 
-      #### Signal
+        `+353 873924796`
 
-      Like WhatsApp, Signal is a free messaging app with full end-to-end encryption. Unlike Whatsapp, Signal is an open source project funded by grants and donations, and is purpose-built for privacy and security. You can download it from the App Store.
+        #### Signal
 
-      Add us:
+        Like WhatsApp, Signal is a free messaging app with full end-to-end encryption. Unlike Whatsapp, Signal is an open source project funded by grants and donations, and is purpose-built for privacy and security. You can download it from the App Store.
 
-      `+353 873924796`
+        Add us:
 
-      #### By Post
+        `+353 873924796`
 
-      You can also send us a letter:
+        #### By Post
 
-    %pre
-      %code
-        Dublin Inquirer
-        Parkview House
-        65 Crumlin Road
-        Dublin 12
-        D12 EP4F
+        You can also send us a letter:
+
+      %pre
+        %code
+          Dublin Inquirer
+          Parkview House
+          65 Crumlin Road
+          Dublin 12
+          D12 EP4F
 
 = render partial: 'products/enticement'
