--- a/app/views/home/stockists.html.haml
+++ b/app/views/home/stockists.html.haml
@@ -1,53 +1,52 @@
 - title "Stockists"
 - set_meta_tags canonical: "https://www.dublininquirer.com/stockists"
 
-.wrapper.-contained{role: 'layout'}
-  %header.-static
-    %h1.heading Stockists
+%header.page-header
+  %h1.heading Stockists
 
-    %p.p.-b1
-      Our monthly print edition is stocked by these lovely folks around the city.
+  %p.p.-b1
+    Our monthly print edition is stocked by these lovely folks around the city.
 
-  .block.-mt2.-mb4
-    .row
-      .col-xs-12.col-lg-8
-        %ul.list
-          %li
-            %h4 Wigwam
-            %p 54 Abbey Street Middle, Dublin 1
-          %li
-            %h4 Connolly Books
-            %p 43 East Essex Street, Dublin 2
-          %li
-            %h4 The Library Project
-            %p 4 Temple Bar Street, Dublin 2
-          %li
-            %h4 Irish Film Institute Shop
-            %p 6 Eustace Street, Dublin 2
-          %li
-            %h4 George’s Street Arcade
-            %p 2 South Great George’s Street, Dublin 2
-          %li
-            %h4 Little Museum of Dublin
-            %p 15 St Stephen’s Green, Dublin 2
-          %li
-            %h4 Books Upstairs
-            %p 17 D’Olier Street, Dublin 2
-          %li
-            %h4 Bark Coffee at Alan Hannah’s Bookshop
-            %p 270 Rathmines Road Lower, Dublin 6
-          %li
-            %h4 Back Page
-            %p 199 Phibsborough Rd, Dublin 7
-          %li
-            %h4 Urbanity Coffee
-            %p The Glass House, 11 Coke Lane, Dublin 7
-          %li
-            %h4 Bang Bang
-            %p 59A Leinster St North, Dublin 7
-          %li
-            %h4 Marrowbone Books
-            %p 78 The Coombe, Dublin 8
-          %li
-            %h4 Smallchanges Wholefoods Store
-            %p 40 Drumcondra Road Lower, Dublin 9
+.block.-p2.-pb4
+  .wrapper.-small{role: 'layout'}
+    .article
+      %ul.list
+        %li
+          %h4 Wigwam
+          %p 54 Abbey Street Middle, Dublin 1
+        %li
+          %h4 Connolly Books
+          %p 43 East Essex Street, Dublin 2
+        %li
+          %h4 The Library Project
+          %p 4 Temple Bar Street, Dublin 2
+        %li
+          %h4 Irish Film Institute Shop
+          %p 6 Eustace Street, Dublin 2
+        %li
+          %h4 George’s Street Arcade
+          %p 2 South Great George’s Street, Dublin 2
+        %li
+          %h4 Little Museum of Dublin
+          %p 15 St Stephen’s Green, Dublin 2
+        %li
+          %h4 Books Upstairs
+          %p 17 D’Olier Street, Dublin 2
+        %li
+          %h4 Bark Coffee at Alan Hannah’s Bookshop
+          %p 270 Rathmines Road Lower, Dublin 6
+        %li
+          %h4 Back Page
+          %p 199 Phibsborough Rd, Dublin 7
+        %li
+          %h4 Urbanity Coffee
+          %p The Glass House, 11 Coke Lane, Dublin 7
+        %li
+          %h4 Bang Bang
+          %p 59A Leinster St North, Dublin 7
+        %li
+          %h4 Marrowbone Books
+          %p 78 The Coombe, Dublin 8
+        %li
+          %h4 Smallchanges Wholefoods Store
+          %p 40 Drumcondra Road Lower, Dublin 9
