--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,10 +1,11 @@
 - title display_category(@category)
-- description "Articles in Dublin Inquirer's #{ display_category(@category) } category."
+- description "Articles in the #{ display_category(@category) } category."
 
-.wrapper.-contained{role: 'layout'}
-  %header.header.-category
-    %h1.heading= display_category(@category)
-  .container
+%header.page-header
+  %h1.heading= display_category(@category)
+
+.block.-p2.-pb4
+  .wrapper.-contained{role: 'layout'}
     .row
       - @articles.each do |article|
         .col-xs-12.col-md-6.col-lg-3.col.flex
