--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,16 +1,17 @@
 - title @tag.name
 - description "Dublin Inquirer articles related to #{ @tag.name } "
 
-.wrapper.-contained{role: 'layout'}
-  %header.header.-category
-    %h1.heading
-      Articles related to
-      %code.-quote #{ @tag.name }
-  .container
+%header.page-header
+  %h1.heading
+    Articles related to
+    %code.-quote #{ @tag.name }
+
+.block.-p2.-pb4
+  .wrapper.-contained{role: 'layout'}
     .row
       - @articles.each do |article|
         .col-xs-12.col-md-6.col-lg-3.col.flex
           = render partial: 'articles/excerpts/result', locals: {article: article}
           %hr.-stroke
 
-  = render partial: 'layouts/pagination', locals: {page: @page, collection: @articles, query_params: {}}
+    = render partial: 'layouts/pagination', locals: {page: @page, collection: @articles, query_params: {}}
