--- a/app/views/issues/show.html.haml
+++ b/app/views/issues/show.html.haml
@@ -1,14 +1,14 @@
 - title @issue.issue_date.to_s
-- description "Articles from Dublin Inquirer's #{ @issue.issue_date } issue"
+- description "Articles from Dublin Inquirer's #{ @issue.issue_date.strftime('%-d %B %Y') } issue"
 
-.wrapper.-contained{role: 'layout'}
-  %header.header.-category
-    %h1.heading= @issue.issue_date.strftime('%-d %B %Y')
-  .container
+%header.page-header
+  %h1.heading From the #{ @issue.issue_date.strftime('%-d %B %Y') } issue
+
+.block.-p2.-pb4
+  .wrapper.-contained{role: 'layout'}
     - @articles.in_groups_of(4, false).each do |group|
       .row
         - group.each do |article|
           .col-xs-12.col-lg-3
             = render partial: 'articles/excerpts/result', locals: { article: article }
             %hr.-stroke.-not-lg
-      %hr.-stroke.-only-lg.-not-if-last
