unify index page layouts

--- a/app/assets/stylesheets/components/_page-header.sass
+++ b/app/assets/stylesheets/components/_page-header.sass
@@ -1,6 +1,7 @@
 .page-header
   border-bottom: 1px solid var(--black)
   padding: 2rem
+  position: relative
 
   .heading
     font-size: var(--h1)
@@ -9,10 +10,25 @@
     font-weight: 300
     margin-bottom: var(--baseline)
 
+  .illustration
+    position: absolute
+    right: 2rem
+    top: 2rem
+    bottom: 2rem
+    width: 40%
+
+    img
+      display: block
+      width: 100%
+      height: 100%
+      object-fit: contain
+      object-position: right center
+
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
     padding-top: 17.5vh
     padding-bottom: 7.5vh
+    padding-right: 50%
 
     .heading
       margin-bottom: 5vh
