--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -53,6 +53,17 @@
     &:last-child
       margin-bottom: 0
 
+  &.-fancy
+    font-family: $serif
+    font-size: var(--h3)
+    line-height: 1.4
+    text-align: center
+
+    @media screen and (min-width: $small)
+    @media screen and (min-width: $medium)
+    @media screen and (min-width: $large)
+      font-size: var(--h2)
+
 .text.-tiny
   font-size: var(--b5)
   line-height: 1.25
