--- a/app/views/issues/index.html.haml
+++ b/app/views/issues/index.html.haml
@@ -1,7 +1,7 @@
 - title 'Past issues of Dublin Inquirer'
 
 %header.page-header
-  %h1.heading Past issues of Dublin Inquirer
+  %h1.heading Past issues
 
 .block.-p2.-pb4
   .wrapper.-contained{role: 'layout'}
