--- a/app/assets/stylesheets/components/_box.sass
+++ b/app/assets/stylesheets/components/_box.sass
@@ -26,8 +26,22 @@
   padding: var(--gutter)
 
   header.-tiny
+    position: relative
+    text-align: center
+    line-height: calc(var(--baseline) * 1.5)
+    padding-bottom: calc(var(--gutter)/2)
     &:after
       background-color: var(--blue)
+      position: absolute
+      height: 1px
+      content: ' '
+      display: block
+      bottom: calc(var(--gutter)/4)
+      left: calc(50% - (var(--gutter)/4))
+      right: calc(50% - (var(--gutter)/4))
+
+    .heading + p, .headline + p, p + p
+      margin-top: calc(var(--baseline)/2)
 
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
