--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -7,25 +7,16 @@
   - set_meta_tags og: {image: @author.portrait.url}
   - set_meta_tags twitter: {image: {'_': @author.portrait.url}}
 
-.wrapper.-vertical{role: 'layout'}
-  .wrapper{role: 'layout'}
-    %header.header.-category.-author
-      .portrait
-        - if @author.portrait.present?
-          = image_tag @author.portrait.url
-      .info
-        %h1.heading= @author.full_name
-        .bio.text.-small
-          :markdown
-            #{ raw @author.bio }
+%header.page-header
+  %h1.heading= @author.full_name
+  .p.-b1
+    :markdown
+      #{ raw @author.bio }
 
-    .container
-      - @articles.in_groups_of(4, false).each do |group|
-        .row
-          - group.each do |article|
-            .col-xs-12.col-lg-3
-              = render partial: 'articles/excerpts/result', locals: { article: article }
-              %hr.-stroke.-not-lg
-        %hr.-stroke.-only-lg.-not-if-last
+  .illustration
+    - if @author.portrait.present?
+      = image_tag @author.portrait.url
 
-    = render partial: 'layouts/pagination', locals: {page: @page, collection: @articles}
+.block.-p2.-pb4
+  .wrapper.-contained{role: 'layout'}
+    = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {}}
