--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -8,10 +8,4 @@
 
 .block.-p2.-pb4
   .wrapper.-contained{role: 'layout'}
-    .row
-      - @articles.each do |article|
-        .col-xs-12.col-md-6.col-lg-3.col.flex
-          = render partial: 'articles/excerpts/result', locals: {article: article}
-          %hr.-stroke
-
-    = render partial: 'layouts/pagination', locals: {page: @page, collection: @articles, query_params: {}}
+    = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {q: @query}}
