ibid for article#show

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -20,11 +20,12 @@
 
 = render partial: "articles/templates/#{ @template }", locals: { article: @article, limited: @limited }
 
-- if @article.commentable?
-  .wrapper.-small{role: 'layout'}= render partial: 'comments/comments', locals: { article: @article }
+.block.-py4
+  - if @article.commentable?
+    .wrapper.-small{role: 'layout'}= render partial: 'comments/comments', locals: { article: @article }
 
 - if @article.tags.any?
-  .block.-mt4.-mb4.-bt.-px2.-pt4
+  .block.-bt.-py4.-px2
     %header.header.-issue
       %h3.heading Filed under
 
@@ -33,15 +34,16 @@
         - @article.displayable_tags.each do |tag|
           %li= link_to tag.name, tag_path(id: tag.slug)
 
-.block.-mt4.-mb4.-bt.-pt4
-  %header.header.-issue
-    %h4.heading Also in the #{ @article.issue_date.strftime('%-d %B %Y') } issue
+- if @article.from_the_same_issue.by_position.any?
+  .block.-bt.-py4.-px2
+    %header.header.-issue
+      %h4.heading Also in the #{ @article.issue_date.strftime('%-d %B %Y') } issue
 
-  .row
-    - @article.from_the_same_issue.by_position.first(6).each do |article|
-      .col-xs-12.col-md-4.col-lg-2.col.flex
-        = render partial: 'articles/excerpts/tiny', locals: { article: article }
-        %hr.-stroke
+    .row
+      - @article.from_the_same_issue.by_position.first(6).each do |article|
+        .col-xs-12.col-md-4.col-lg-2.col.flex
+          = render partial: 'articles/excerpts/tiny', locals: { article: article }
+          %hr.-stroke
 
 - if permission_for_cookie? and @article.paywalled? # yes cookie, and yes paywalled
   = render partial: 'user_sessions/paywall'
