--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -1,6 +1,13 @@
 $sans: "Zirkon", sans-serif
 $serif: "Suisse Works", serif
 
+$small: 640px
+$medium: 920px
+$large: 1080px
+$max: 1500px
+$contained: 1740px
+$gutter: 4rem
+
 \:root
   // font sizes
   --b1: 1.92rem
