unify upgrade enticement styles

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -72,6 +72,13 @@
     margin-top: 1em
     margin-bottom: 1em
 
+  ul
+    padding-left: 3rem
+    font-family: $sans
+    li
+      &:before
+        content: '— '
+
   .section-separator
     text-align: center
     color: var(--black)
