add a style for OLs in articles

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -79,6 +79,10 @@
       &:before
         content: '— '
 
+  ol
+    padding-left: 3rem
+    list-style: decimal inside
+
   .section-separator
     text-align: center
     color: var(--black)
