add ul, ol styles for previews

--- a/app/assets/stylesheets/admin/_admin-preview.sass
+++ b/app/assets/stylesheets/admin/_admin-preview.sass
@@ -58,6 +58,12 @@
       margin-top: 1em
       margin-bottom: 1em
 
+    ul
+      list-style: disc inside
+
+    ol
+      list-style: decimal inside
+
     .section-separator
       text-align: center
       color: var(--black)
