--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -7,7 +7,7 @@
   - set_meta_tags og: {image: @author.portrait.url}
   - set_meta_tags twitter: {image: {'_': @author.portrait.url}}
 
-%header.page-header
+%header.page-header.-illustrated
   %h1.heading= @author.full_name
   .p.-b1
     :markdown
