--- a/app/assets/stylesheets/components/_page-header.sass
+++ b/app/assets/stylesheets/components/_page-header.sass
@@ -17,6 +17,7 @@
   @media screen and (min-width: $medium)
     padding-top: 17.5vh
     padding-bottom: 7.5vh
+    padding-right: 25%
 
     .heading
       font-size: var(--h1)
