more iteration on landing page

--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -1,10 +1,19 @@
 .block
+  &.-pull-up
+    margin-top: -4rem
+  &.-pull-down
+    margin-bottom: -4rem
+    z-index: 9999
+    position: relative
   &.-bg-black
     color: var(--default)
     background-color: var(--black)
   &.-bg-blue
     color: var(--default)
     background-color: var(--blue)
+  &.-bg-default
+    color: var(--black)
+    background-color: var(--default)
   &.-bg-faint
     color: var(--black)
     background-color: var(--faint)
