--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -1,49 +1,62 @@
-.wrapper.-medium{role: 'layout'}
-  .block.-py4
-    .text.-centered
-      :markdown
-        ## Help our reporters cover the important stories.
+.block.-py4
+  .text.-centered
+    %h1.h.-h2 Help our reporters cover the important stories.
 
-        ### Subscribe for only €5 per month.
+    %p.p.-p1 Subscribe for only €5 per month.
 
-        One month free.<br>
-        Cancel anytime.
+    :markdown
 
-  .box
-    .block.-p2
-      :markdown
-        Unlimited access to our online digital edition. This includes everything we publish and access to the full archive of everything we've ever published.
+      One month free.<br>
+      Cancel anytime.
 
-        One month free, and then only €5 per month.
-
-      = link_to "Subscribe", :products, class: 'button'
-
-  .block.-p2
-    .row
-      .col-xs-6
+.block.-pull-down
+  .wrapper.-medium{role: 'layout'}
+    .box.-tight
+      .block.-bg-default.-p2
         :markdown
-          ### Unlimited articles
+          Unlimited access to our online digital edition. This includes everything we publish and access to the full archive of everything we've ever published.
 
-          Enjoy unlimited article access on *dublininquirer.com* and our mobile-optimised site.
+          One month free, and then only €5 per month.
 
-      .col-xs-6
-        :markdown
-          ### Events & exclusives
+        = link_to "Subscribe", :products, class: 'button'
 
-          Access exclusive features and newsletters, along with previews of new media releases.
+.block.-bt.-bg-faint.-pt4
+  .wrapper.-medium{role: 'layout'}
+    .block.-px2.-py4
+      .row
+        .col-xs-6
+          :markdown
+            ### Unlimited articles
 
-.block.-bt.-p2
+            Enjoy unlimited article access on *dublininquirer.com* and our mobile-optimised site.
+
+        .col-xs-6
+          :markdown
+            ### Events & exclusives
+
+            Access exclusive features and newsletters, along with previews of new media releases.
+
+.block.-bt.-px2.-py4
   .wrapper.-small{role: 'layout'}
     .text
       .box.-tight
-        .header.-box.-tight
+        %header.-box.-tight
           .heading Frequently Asked Questions
 
-        :markdown
-          #### What does 'independent' and 'reader-funded' mean?
+        .block.-p1
+          :markdown
+            #### What does 'independent' and 'reader-funded' mean?
 
-          Independent means we're owned by us (that is: Lois, Brian, and Conal). We're not answering to investors or shareholders who demand profitability.
+            Independent means that the company is wholly owned by us. We don't need to answer to investors or shareholders who demand we maximise profitability or push a particular agenda.
 
-          Reader-funded means the vast majority of our revenue comes from readers who subscribe.
+            Reader-funded means the _vast_ majority of our revenue comes from readers who subscribe. We think this aligns our incentives with those of our readers. If we're doomed to be beholden to our funders, we'd prefer those funders be Dubliners.
 
-          #### What is the cancellation policy?
+            #### Is there a student/unwaged rate?
+
+            Nobody will be turned away for want of funds. If you're a student, not working, or otherwise unable to afford a subscription, send [us an email](mailto:brian@dublininquirer.com) and we'll see if we can work something out.
+
+            #### What is the cancellation policy?
+
+            You can cancel at any time. Your subscription will continue until the end of your billing cycle, and you won't be billed again. No long term contracts or funny business.
+
+= render partial: 'products/enticement'
