landing page template direct_190227

--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -44,9 +44,13 @@
     background: var(--black)
     color: var(--default)
     padding: 1rem 2rem
+    text-align: center
     &:hover
       cursor: pointer
       background: var(--blue)
+
+  &.-blue
+    background: var(--blue)
 
   &.-white
     background-color: var(--default)
