--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -8,7 +8,7 @@
     :markdown
       Dublin Inquirer is funded mainly by its subscribers, rather than advertisers. That way, we can stay independent, and focused on the stories that readers want and need – and stories that you won’t find anywhere else.
 
-      We also run occasional events, from pub quizzes, to talks and debates. Subscribers often get first dibs on tickets, or discounts, or both.
+      We also run occasional events, from pub quizzes to talks and debates. Subscribers often get first dibs on tickets, or discounts, or both.
 
 %header.header.-section
   %h2.heading Subscription options
