--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -48,4 +48,4 @@
 
     = render partial: 'layouts/search'
     = render partial: 'layouts/expansive-nav'
-    = render partial: 'layouts/analytics'
+    = render partial: 'layouts/snippets/analytics'
