--- a/app/assets/stylesheets/shared/_nav.sass
+++ b/app/assets/stylesheets/shared/_nav.sass
@@ -5,6 +5,10 @@ nav.-centered
   align-items: center
   flex: 1
 
+  @media screen and (min-width: $small)
+  @media screen and (min-width: $medium)
+  @media screen and (min-width: $large)
+
 nav.-box
   margin-top: 0
   border-top: 1px solid var(--black)
