--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -54,4 +54,4 @@
     = render partial: 'layouts/search'
     = render partial: 'layouts/expansive-nav'
     = auto_discovery_link_tag(:rss, feed_url(format: :xml))
-    = render partial: 'layouts/analytics'
+    = render partial: 'layouts/snippets/analytics'
