--- a/app/views/layouts/modal.html.haml
+++ b/app/views/layouts/modal.html.haml
@@ -38,4 +38,4 @@
             .logotype.-stacked Dublin InQuirer
             %p Reader supported.
 
-    = render partial: 'layouts/analytics'
+    = render partial: 'layouts/snippets/analytics'
