simplify gift thanks page

--- a/app/views/gift_subscriptions/thanks.html.haml
+++ b/app/views/gift_subscriptions/thanks.html.haml
@@ -13,11 +13,11 @@
 
     If you have any problems, story suggestions, or just want to talk: email us at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>. We like talking to our readers!
 
-%nav.box.-padded-v
+%nav.box.-invisible.-tight.-other
   = link_to "Go to the home page", :root, class: 'button -big'
 
 :javascript
-  fbq('track', 'Subscribe', {
+  fbq('track', 'Purchase', {
     value: 30,
     currency: 'EUR'
   });
