slightly improved small-screen buttons on direct landing page

--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -18,8 +18,9 @@
                 One month free, and then only €5 per month.
 
         .col-xs-12.col-sm-4.col.flex
-          %nav.-centered
-            = link_to "Subscribe", product_path(:digital), class: 'button -big'
+          .block.-px2.-py1.col.flex
+            %nav.-centered
+              = link_to "Subscribe", product_path(:digital), class: 'button -big'
 
       .block.-p2.-bt
         .p.-b4
