add silly cranes to landing page

--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -17,6 +17,10 @@
   &.-bg-faint
     color: var(--black)
     background-color: var(--faint)
+  &.-bg-image
+    background-size: cover
+    background-position: center
+
   &.-m0
     margin: 0
   &.-mt0
