--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -1,45 +1,45 @@
-.block.-py4
+.block.-pt4.-px2.-bg-image{style: "background-image: url('#{ asset_path "ads/cranes.jpg" }')"}
   .text.-centered
     %h1.h.-h2 Help our reporters<br>cover the important stories.
 
     %p.p.-b2 Subscribe now and get your first month free.
 
-.block.-pull-down.-px2
-  .wrapper.-medium{role: 'layout'}
-    .block.-bg-default.-b-highlight.-shadow
-      .row
-        .col-xs-12.col-sm-8
-          .block.-p2
-            %h3 Basic digital subscription
-            .p.-b2
-              :markdown
-                Unlimited access to our online digital edition.
-
-                One month free, and then only €5 per month.
-
-        .col-xs-12.col-sm-4.col.flex
-          .block.-px2.-py1.col.flex
-            %nav.-centered
-              = link_to "Subscribe", product_path(:digital), class: 'button -big'
-
-      .block.-p2.-bt
-        .p.-b4
-          .row
-            .col-xs-12.col-md-6
-              .text
+  .block.-mt4.-pull-down
+    .wrapper.-medium{role: 'layout'}
+      .block.-bg-default.-b-highlight.-shadow
+        .row
+          .col-xs-12.col-sm-8
+            .block.-p2
+              %h3 Basic digital subscription
+              .p.-b2
                 :markdown
-                  ##### Unlimited access
+                  Unlimited access to our online digital edition.
 
-                  Read unlimited articles on **dublininquirer.com** and our mobile-optimised site. This includes access to the full archive of everything we've ever published.
+                  One month free, and then only €5 per month.
 
-            .col-xs-12.col-md-6
-              .text
-                :markdown
-                  ##### Events & community
+          .col-xs-12.col-sm-4.col.flex
+            .block.-px2.-py1.col.flex
+              %nav.-centered
+                = link_to "Subscribe", product_path(:digital), class: 'button -big'
 
-                  We also run occasional events, from pub quizzes to talks and debates. Subscribers usually get first dibs on tickets, or discounts, or both.
+        .block.-p2.-bt
+          .p.-b4
+            .row
+              .col-xs-12.col-md-6
+                .text
+                  :markdown
+                    ##### Unlimited access
 
-.block.-bt.-px2.-py4.-bg-faint
+                    Read unlimited articles on **dublininquirer.com** and our mobile-optimised site. This includes access to the full archive of everything we've ever published.
+
+              .col-xs-12.col-md-6
+                .text
+                  :markdown
+                    ##### Events & community
+
+                    We also run occasional events, from pub quizzes to talks and debates. Subscribers usually get first dibs on tickets, or discounts, or both.
+
+.block.-bt.-px2.-py4.-bg-default
   .wrapper.-small{role: 'layout'}
     .block.-py4
       .box.-tight.block.-bg-default
