--- a/app/views/layouts/modal.html.haml
+++ b/app/views/layouts/modal.html.haml
@@ -11,11 +11,9 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
-    <script src="https://js.stripe.com/v3/"></script>
-    %script{type: "text/javascript"}
-      var stripe = Stripe('#{ Rails.application.config.stripe[:publishable_key] }');
     = javascript_include_tag 'application'
     = render partial: 'layouts/snippets/fb'
+    = render partial: 'layouts/snippets/stripe'
 
   %body
     .modal{role: 'layout'}
