more prominent subscribe button in the header

--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -1,10 +1,12 @@
 .button, a.button, a.button:link, a.button:visited, input.button
   &.-nav,
     background-color: var(--faint)
+    opacity: 0.9
     padding: 0 0.5rem
     &:hover
-      background-color: var(--blue)
-      color: var(--default)
+      background-color: var(--faint)
+      color: var(--black)
+      opacity: 1
 
   &.-standard
     border: 0
