--- a/app/assets/stylesheets/components/_meta-nav.sass
+++ b/app/assets/stylesheets/components/_meta-nav.sass
@@ -47,6 +47,26 @@
     a + a
       margin-left: 1rem
 
+  .subscribe
+    border-left: 1px solid var(--black)
+    display: flex
+    flex-direction: column
+    justify-content: stretch
+    a, a:link, a:visited
+      flex: 1
+      display: flex
+      flex-direction: column
+      justify-content: center
+      display: block
+      line-height: 3rem
+      vertical-align: center
+      background: var(--yellow)
+      color: var(--black)
+      padding: 0.1rem 1rem 0
+      font-weight: 600
+      &:hover
+        color: var(--red)
+
   .breadcrumbs
     a + a, a + .current
       &:before
@@ -78,6 +98,10 @@
     z-index: 9999
     height: 4.32rem
     overflow: hidden
+
+    .subscribe
+      a, a:link, a:visited
+        line-height: 3.5rem
 
     .center
       min-height: 3.5rem
