--- a/app/assets/stylesheets/shared/_list.sass
+++ b/app/assets/stylesheets/shared/_list.sass
@@ -40,6 +40,9 @@
 
   &.-articles
     font-family: $serif
+    padding: 0
+    margin-left: 0
+    margin-right: 0
     & > li
       display: inline
     & > li + li
